fix: tagline fade-in on mobile

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -316,9 +316,14 @@ html{
   .chaos {padding-bottom: 20px;}
   .mouse {display: none;}
   .name { 
-    font-size: 80px;
+    font-size: 6em !important;
     padding-top:140px;
   }
+
+  .viewheight {
+    min-height: 80vh !important; 
+  }
+
   .tagline { font-size: 28px; }
   .projects { 
     margin: 0 30px; 
@@ -342,9 +347,9 @@ html{
 @media (max-width: 530px) {
   .name { font-size: 80px !important; margin: 0 0.5em;}
   .roles { font-size: 18px !important; }
-  .viewheight {
+  /* .viewheight {
     min-height: 100vh !important; 
-  }
+  } */
   .tagline { font-size: 22px !important; }
   .chaos { font-size: 24px !important; }
   .projects {
